styles.css
body {
  background-size: cover;
  height: 100%;
  font-family: 'Mina', sans-serif;

}


a {
  transition: .3s;
  opacity: .8;
  color: white;
}

#title{
  color: #ADADAD;
}

#welcome{
  transform: translateX(-50%) translateY(-50%);
  position: absolute;
  top: 50%;
  left: 50%;
  color: #ADADAD;
}


h1{
  padding-top: 20px;
  color: black;
  font-weight: .5;
  font-size: 60px;
  color: #ADADAD;
  text-align: center;
  opacity: .7;
  transition: .5s;
}

h1:hover{
  transition: .5s;
  opacity: 1;
}

table{
  display: block;
  text-align: center;
  padding: 20px;
  text-decoration: none !important;
  margin: auto;

}

td{
  height: 600px;
  max-width: 300px;
  transition: .3s;
  opacity: .8;
  padding: 10px;
  color: white;
  text-decoration: none !important;

}

td:hover{ 
  transition: .3s;
  opacity: .3;
  background-color: white;
  color: black;
  text-decoration: none !important;

}

#face{
  background-image: url('https://students.washington.edu/amosaula/index/img/face.jpg');
  background-position: right;
  transition: .3s;
}


#hobbies{
  background-image: url('https://students.washington.edu/amosaula/index/img/concert.jpg');
  background-position: center;
}


#design{
  background-image: url('https://students.washington.edu/amosaula/index/img/design.jpg');
  background-position: center;
}

#contact{
  background-image: url('https://students.washington.edu/amosaula/index/img/contact.jpg');
  background-position: center;
}

